--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context="smartcompass.teamdz.com.smartcompass2018.MainActivity">
 
     <Button
+        android:id="@+id/btn_compass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Compass"
-        android:textColorHint="@color/colorAccent"/>
+        android:textColorHint="@color/colorAccent" />
 
     <Button
         android:id="@+id/btn_maps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="GoogleMap"
-        android:textColorHint="@color/colorPrimary"/>
+        android:textColorHint="@color/colorPrimary" />
 
 </LinearLayout>
