--- a/app/src/main/res/layout/activity_compass_layout.xml
+++ b/app/src/main/res/layout/activity_compass_layout.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CompassActivity">
-    <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/compass"
-        android:id="@+id/iv_compass"/>
+    android:orientation="vertical"
+    tools:context=".ui.compass.CompassActivity">
+
+    <FrameLayout
+        android:id="@+id/layout_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
