--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f4f4f4</color>
-    <color name="colorPrimaryDark">#f4f4f4</color>
+    <color name="colorPrimary">#424242</color>
+    <color name="colorPrimaryDark">#212121</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color_main_background">#101010</color>
     <color name="color_text_compass">#F4F4F4</color>
+    <color name="colorPrimaryWhite">#F4F4F4</color>
+    <color name="color_around_compass_map">#FF000000</color>
+    <color name="color_warning_calibrate">#f9e536</color>
+    <color name="color_calibrate_low">#ec4a25</color>
+    <color name="color_calibrate_medium">#e2bc23</color>
 </resources>
