--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,13 +1,30 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="smartcompass.teamdz.com.smartcompass2018.ui.maps.MapsActivity">
-
-    <fragment
-        android:id="@+id/map"
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map_view"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <FrameLayout
+        android:layout_width="330dp"
+        android:layout_height="330dp"
+        android:layout_gravity="center">
+        <ImageView
+            android:id="@+id/iv_around_compass"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@mipmap/around_compass_map" />
 
-</LinearLayout>
+        <smartcompass.teamdz.com.smartcompass2018.view.DirectionImage
+            android:id="@+id/iv_compass_map"
+            android:layout_width="320dp"
+            android:layout_height="320dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/compass_map" />
+    </FrameLayout>
+
+
+</FrameLayout>
