--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="text_title_city_h5">24sp</dimen>
     <dimen name="text_longitude_and_latitude_h4">16sp</dimen>
+    <dimen name="margin_layout">16dp</dimen>
 </resources>
