--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,16 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/color_main_background</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:alertDialogTheme">@style/DialogTheme</item>
         <item name="android:windowBackground">@color/colorPrimaryDark</item>
     </style>
     <style name="ToolBarStyle" parent="Theme.AppCompat">
         <item name="android:textColorPrimary">@color/colorPrimaryWhite</item>
         <item name="android:textColorSecondary">@color/colorPrimaryWhite</item>
         <item name="actionMenuTextColor">@color/colorPrimaryWhite</item>
+    </style>
+    <style name="DialogTheme" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:textColor">@color/colorPrimaryWhite</item>
+        <item name="android:windowBackground">@color/colorPrimaryDark</item>
     </style>
 </resources>
