--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     tools:context="smartcompass.teamdz.com.smartcompass2018.ui.maps.MapsActivity">
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/map_view"
+    <fragment
+        android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
