--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_title_city_h5">24sp</dimen>
-    <dimen name="text_longitude_and_latitude_h4">16sp</dimen>
+    <dimen name="text_longitude_and_latitude_h4">20sp</dimen>
     <dimen name="margin_layout">16dp</dimen>
+    <dimen name="text_title_city_h6">28sp</dimen>
 </resources>
