--- a/app/src/main/res/layout/fragment_content_compass.xml
+++ b/app/src/main/res/layout/fragment_content_compass.xml
@@ -129,9 +129,10 @@
         android:layout_marginStart="16dp"
         android:background="@drawable/background_click_button"
         android:padding="8dp"
-        android:tint="@color/colorPrimaryWhite"
+        android:layout_marginTop="30dp"
+        android:tint="@color/color_warning_calibrate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_location_city"
+        app:layout_constraintTop_toBottomOf="@+id/iv_compass"
         app:srcCompat="@drawable/ic_star_gray" />
 
     <ImageButton
@@ -141,9 +142,10 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/background_click_button"
         android:padding="8dp"
-        android:tint="@color/colorPrimaryWhite"
+        android:layout_marginTop="30dp"
+        android:tint="@color/color_warning_calibrate"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_location_city"
+        app:layout_constraintTop_toBottomOf="@+id/iv_compass"
         app:srcCompat="@drawable/ic_warning_gray" />
 
     <ImageView
@@ -156,4 +158,13 @@
         app:layout_constraintStart_toStartOf="@+id/iv_compass"
         app:layout_constraintTop_toTopOf="@+id/iv_compass"
         app:srcCompat="@mipmap/line_degrees" />
+    <com.google.android.gms.ads.NativeExpressAdView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/ads_banner_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:adSize="SMART_BANNER"
+        android:layout_centerHorizontal="true"
+        app:layout_constraintTop_toBottomOf="@+id/tv_longitude"
+        app:adUnitId="@string/ad_unit_banner"/>
 </android.support.constraint.ConstraintLayout>
