--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -103,6 +103,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_all"
         app:adSize="SMART_BANNER"
-        app:adUnitId="@string/ad_unit_banner"/>
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
 
 </RelativeLayout>
