--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#424242</color>
-    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorPrimary">#312323</color>
+    <color name="colorPrimaryDark">#2c2121</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color_main_background">#101010</color>
     <color name="color_text_compass">#F4F4F4</color>
