--- a/app/src/main/res/layout/fragment_content_compass.xml
+++ b/app/src/main/res/layout/fragment_content_compass.xml
@@ -13,11 +13,10 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/margin_top_image_direction"
         android:src="@mipmap/compass_white"
+        app:layout_constraintBottom_toTopOf="@+id/tv_location_city"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_degrees_direction" />
@@ -27,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="@dimen/margin_top_settings_maps"
         android:background="@drawable/background_click_button"
         android:padding="8dp"
         android:tint="@color/colorPrimaryWhite"
@@ -43,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="@dimen/margin_top_settings_maps"
         android:background="@drawable/background_click_button"
         android:padding="8dp"
         android:tint="@color/colorPrimaryWhite"
@@ -58,25 +57,21 @@
         android:id="@+id/tv_location_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_bottom_text_location_name"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
-        android:text="Ha Noi"
+        android:text="My Location"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_title_city_h6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_compass" />
+        app:layout_constraintBottom_toTopOf="@+id/tv_longitude"
+        app:layout_constraintEnd_toStartOf="@+id/iv_warning"
+        app:layout_constraintStart_toEndOf="@+id/iv_star_rate" />
 
     <TextView
         android:id="@+id/tv_latitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="@dimen/margin_end_latitude"
         android:text="32.05"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_longitude_and_latitude_h4"
@@ -90,59 +85,60 @@
         android:id="@+id/tv_longitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="@dimen/margin_bottom_text_lat_long"
+        android:layout_marginStart="@dimen/margin_start_longitude"
         android:text="21.03"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_longitude_and_latitude_h4"
+        app:layout_constraintBottom_toTopOf="@+id/ads_banner_home"
         app:layout_constraintEnd_toStartOf="@+id/iv_warning"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tv_latitude"
-        app:layout_constraintTop_toBottomOf="@+id/tv_location_city" />
+        app:layout_constraintStart_toEndOf="@+id/tv_latitude" />
 
     <TextView
         android:id="@+id/tv_degrees_direction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
         android:text="DN"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_title_city_h6"
+        app:layout_constraintBottom_toTopOf="@+id/iv_compass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_settings" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_map"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <ImageButton
         android:id="@+id/iv_star_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_top_image_star_warning"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/background_click_button"
         android:padding="8dp"
         android:tint="@color/color_warning_calibrate"
+        app:layout_constraintBottom_toTopOf="@+id/ads_banner_home"
+        app:layout_constraintEnd_toStartOf="@+id/iv_warning"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_location_city"
         app:srcCompat="@drawable/ic_star_gray" />
 
     <ImageButton
         android:id="@+id/iv_warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_bottom_image_star_warning"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/background_click_button"
         android:padding="8dp"
         android:tint="@color/color_warning_calibrate"
+        app:layout_constraintBottom_toTopOf="@+id/ads_banner_home"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_location_city"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/iv_star_rate"
         app:srcCompat="@drawable/ic_warning_gray" />
 
     <ImageView
@@ -155,13 +151,18 @@
         app:layout_constraintStart_toStartOf="@+id/iv_compass"
         app:layout_constraintTop_toTopOf="@+id/iv_compass"
         app:srcCompat="@mipmap/line_degrees" />
-    <com.google.android.gms.ads.NativeExpressAdView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <com.google.android.gms.ads.NativeExpressAdView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ads_banner_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:adSize="SMART_BANNER"
         android:layout_centerHorizontal="true"
-        app:layout_constraintTop_toBottomOf="@+id/tv_longitude"
-        app:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
